--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.13.2",
     "base64-js": "^1.5.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "bson": "^4.6.4",
     "buffer": "^5.7.1",
